--- a/Style.css
+++ b/Style.css
@@ -287,8 +287,11 @@
     }
 
 
+
+
+
 body {
-    font-family: sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
 }
@@ -332,7 +335,7 @@ body {
     position: relative;
 }
 
-img {
+.pokemon-container img {
     margin-top: 10px;
     width: 120px;
     height: 120px;
